--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "author": {
-    "name": "John Doe",
+    "name": "David Conner",
     "company": "ACME, Inc."
   },
   "dependencies": {
