--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "bootstrap": "3.0.3",
-    "jquery": "~1.11.0"
+    "jquery": "~1.11.0",
+    "font-awesome": "~4.0.3"
   }
 }
